# personal-website

./: .gitignore  Cargo.toml  README.md
.sass-cache/234872407d4c23aaf7fa8d695662049ac9951696/: test.sassc  test.scssc
.sass-cache/c310cedc174a51e89a2b43069039a60a9ca15061/: style.sassc
src/: article.rs  consts.rs  error.rs  get_article.rs  lang.rs  main.rs
src/pages/: mod.rs  style.rs
templates/: index.html  style.css  style.css.map  test.css  test.css.map  test.sass
