[package]
name = "personal-website"
version = "0.1.0"
edition = "2024"

[dependencies]
accept-language = "=3.1.0"
anyhow = "1.0.98"
axum = "0.8.4"
dotenvy = "0.15.7"
jiff = { version = "0.2.15", features = ["serde"] }
notify = "8.0.0"
pulldown-cmark = "0.13.0"
regex = "1.11.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = ["full"] }
toml = "0.8.23"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
